--- a/packages/frontend/src/components/TranslationQuiz.css
+++ b/packages/frontend/src/components/TranslationQuiz.css
@@ -6,8 +6,8 @@
 
 .translations-quiz table thead tr {
   font-size: 20px;
-  background-color: #009879;
-  color: #ffffff;
+  background-color: #916a25;
+  color: rgb(255, 255, 255);
 }
 
 .translations-quiz table th,
@@ -16,18 +16,20 @@
 }
 
 .translations-quiz table tbody tr:nth-of-type(odd) {
-  color: black;
-  background-color: #c4c4c4;
+  color: var(--table-text-odd);
+  background-color: var(--table-bg-odd);
 }
 
 .translations-quiz table tbody tr:nth-of-type(even) {
-  color: white;
-  background-color: #4e4e4e;
+  color: var(--table-text-even);
+  background-color: var(--table-bg-even);
 }
 
 .translations-quiz table tbody .answer-input {
   font-size: 20px;
   padding: 10px;
+  color: var(--table-input-color);
+  background-color: var(--table-input-bg);
 }
 
 .translations-quiz table tbody .wrong-answer {
