--- a/packages/frontend/src/index.css
+++ b/packages/frontend/src/index.css
@@ -3,7 +3,7 @@
   font-family: "Poppins", sans-serif;
   max-width: 800px;
   margin: 0 auto;
-  padding: 0 30px 0 30px;
+  padding: 0 30px 50px 30px;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -17,14 +17,26 @@ body {
 
 [data-theme="dark"] {
   --text-color: white;
-  --background: rgb(8, 24, 35);
+  --background: rgb(0, 0, 0);
   --popup-bg: rgb(38, 38, 38);
+  --table-bg-odd: #585858;
+  --table-text-odd: rgb(255, 255, 255);
+  --table-bg-even: #3a3a3a;
+  --table-text-even: white;
+  --table-input-bg: #533605;
+  --table-input-color: white;
 }
 
 [data-theme="light"] {
   --text-color: black;
   --background: white;
   --popup-bg: rgb(185, 185, 185);
+  --table-bg-odd: #c4c4c4;
+  --table-text-odd: rgb(0, 0, 0);
+  --table-bg-even: #4e4e4e;
+  --table-text-even: white;
+  --table-input-bg: rgb(253, 231, 180);
+  --table-input-color: black;
 }
 
 .center {
@@ -42,11 +54,11 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: black solid 1.5px;
+  border: black solid 0.5px;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #41f294;
+  background-color: lightgreen;
   cursor: pointer;
 }
